--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Salvation'
 - !lcsh 'Holy Cross'
 - !lcsh 'Parables'
+- GITenberg
 title: Parables of the Cross
 url: http://www.gutenberg.org/ebooks/22189
